--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ strategy:
       installer_package_artifact_name: RELIVE-Linux.deb
       qt5_dir: ''
       sdl2_dir: ''
+      qt5_windows_name: ''
     macOS:
       imageName: macOS-latest
       cmake_generator_type: 'Unix Makefiles'
@@ -22,26 +23,29 @@ strategy:
       installer_package_artifact_name: RELIVE-MacOSX.dmg
       qt5_dir: /usr/local/opt/qt@5
       sdl2_dir: ''
+      qt5_windows_name: ''
     Windows32:
       imageName: windows-2019
-      cmake_generator_type: \"Visual Studio 16 2019\"
-      cmake_vs_arch: -A Win32
+      cmake_generator_type: 'Visual Studio 16 2019'
+      cmake_vs_arch: '-A Win32'
       cpack_package_type: ZIP
       cpack_executable: cpack.exe
       installer_package_path: $(System.DefaultWorkingDirectory)/build/relive-0.1-win32.zip
       installer_package_artifact_name: RELIVE-Windows32.zip
       qt5_dir: $(Build.SourcesDirectory)\Qt\5.15.2\msvc2019\lib\cmake\Qt5
       sdl2_dir: C:\Temp\SDL2-2.0.22
+      qt5_windows_name: win32_msvc2019
     Windows64:
       imageName: windows-2019
-      cmake_generator_type: \"Visual Studio 16 2019\"
-      cmake_vs_arch: -A x64
+      cmake_generator_type: 'Visual Studio 16 2019'
+      cmake_vs_arch: '-A x64'
       cpack_package_type: ZIP
       cpack_executable: cpack.exe
       installer_package_path: $(System.DefaultWorkingDirectory)/build/relive-0.1-win64.zip
       installer_package_artifact_name: RELIVE-Windows64.zip
       qt5_dir: $(Build.SourcesDirectory)\Qt\5.15.2\msvc2019_64\lib\cmake\Qt5
       sdl2_dir: C:\Temp\SDL2-2.0.22
+      qt5_windows_name: win64_msvc2019_64
 pool:
   vmImage: $(imageName)
 steps:
@@ -79,7 +83,7 @@ steps:
        aqt list-qt windows desktop --arch 5.15.2
        New-Item -ItemType Directory -Force -Path C:\Qt
        cd C:\Qt
-       aqt install-qt windows desktop 5.15.2 win32_msvc2019
+       aqt install-qt windows desktop 5.15.2 $(qt5_windows_name)
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
     displayName: Windows Create game dirs, install SDL2 and Qt
 
@@ -87,6 +91,9 @@ steps:
         cmake --version
         mkdir build
         cd build
+        echo "$(qt5_dir)"
+        echo "$(cmake_generator_type)"
+        echo "$(cmake_vs_arch)"
         cmake -DQt5_DIR="$(qt5_dir)" -DSDL2_DIR="$(sdl2_dir)" -DBUILD_NUMBER=$(Build.BuildId) -DCI_PROVIDER="AzureDevOps" -G"$(cmake_generator_type)" "$(cmake_vs_arch)" ..
     displayName: cmake configure
 
