fix build order

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,6 +198,7 @@ target_precompile_headers(
 # -----------------------------------------------------------------------------
 
 add_dependencies(relive_lib UpdateConfigHeader)
+add_dependencies(editor_glue_dynamic_crt UpdateConfigHeader)
 
 #add_dependencies(AliveLibAO UpdateConfigHeader)
 #add_dependencies(AliveLibAE UpdateConfigHeader)
