ignore qt editor translation files

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Source/relive_lib/relive_config.h
 Scripts/Hex2Bits.py
 
 /Source/relive/resource.aps
+/Source/Tools/editor/qt-editor_en_GB.ts
+/Source/Tools/editor/qt-editor_German.ts
