hack editor so lines appear

--- a/Source/Tools/editor/CMakeLists.txt
+++ b/Source/Tools/editor/CMakeLists.txt
@@ -29,6 +29,7 @@ set(TS_FILES qt-editor_en_GB.ts qt-editor_German.ts)
 
 include_directories(../../../3rdParty/libmodplug/src)
 include_directories(../../../3rdParty/EasyLogging++/EasyLogging/src)
+include_directories(../../../3rdParty/json/single_include)
 
 include_directories(Source)
 
@@ -155,4 +156,4 @@ if (MSVC)
     set_target_properties(qt-editor PROPERTIES VS_DEBUGGER_ENVIRONMENT "${MY_PATH}")
 endif()
 
-target_link_libraries(qt-editor PUBLIC relive_api Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Multimedia modplug jsonxx editor_glue_dynamic_crt)
+target_link_libraries(qt-editor PUBLIC relive_api Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Multimedia modplug editor_glue_dynamic_crt)
