--- a/appveyor.yml
+++ b/appveyor.yml
@@ -176,3 +176,9 @@ for:
         name: RELIVE_Windows_Binaries_$(configuration)_x64
 
 test: off
+
+on_success: 
+  - python Scripts/appveyor_discord_webhook.py success
+
+on_failure: 
+  - python Scripts/appveyor_discord_webhook.py failure
