--- a/appveyor.yml
+++ b/appveyor.yml
@@ -178,7 +178,7 @@ for:
 test: off
 
 on_success: 
-  - python Scripts/appveyor_discord_webhook.py success
+  - python3 Scripts/appveyor_discord_webhook.py success
 
 on_failure: 
-  - python Scripts/appveyor_discord_webhook.py failure
+  - python3 Scripts/appveyor_discord_webhook.py failure
