add `CommonTypesSerialization.hpp` to cmake

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -609,6 +609,7 @@ SET(data_conversion_src
     data_conversion/fmv_converter.cpp
     data_conversion/fmv_converter.hpp
     data_conversion/LvlReaderWriter.hpp
+    data_conversion/CommonTypesSerialization.hpp
 )
 
 source_group("Source Files/AE"               FILES ${AliveLibAESrc})
