add VGetMapChange comment, add missing TLVConverter.hpp file to cmake

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -622,6 +622,7 @@ SET(data_conversion_src
     data_conversion/fmv_converter.hpp
     data_conversion/LvlReaderWriter.hpp
     data_conversion/CommonTypesSerialization.hpp
+    data_conversion/TLVConverter.hpp
 )
 
 source_group("Source Files/AE"               FILES ${AliveLibAESrc})
