Code review points

--- a/Source/AliveLibCommon/CMakeLists.txt
+++ b/Source/AliveLibCommon/CMakeLists.txt
@@ -41,9 +41,10 @@ SET(AliveLibSrcCommon
     audio/Stream.cpp
     audio/MidiPlayer.hpp
     audio/MidiPlayer.cpp
-    audio/oddio.h)
+    audio/oddio.h
+)
 
-add_library(AliveLibCommon ${AliveLibSrcCommon})
+add_library(AliveLibCommon ${AliveLibSrcCommon}  )
 
 target_include_directories(AliveLibCommon PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
