--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -734,14 +734,13 @@ target_link_libraries(relive_lib Rpcrt4)
 endif()
 
 target_include_directories(relive_lib PUBLIC
-    $<BUILD_INTERFACE:
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/aom
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/aom/third_party/libwebm
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/json/single_include
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/DX9_SDK_Aug09/Include>
-    $<INSTALL_INTERFACE:include>
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/3rdParty>"
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/3rdParty/aom>"
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/3rdParty/aom/third_party/libwebm>"
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/3rdParty/json/single_include>"
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/3rdParty/DX9_SDK_Aug09/Include>"
+    "$<INSTALL_INTERFACE:include>"
     PRIVATE src ${CMAKE_BINARY_DIR})
 
 target_compile_definitions(relive_lib PRIVATE "_CRT_SECURE_NO_WARNINGS")
